istio-system-namespace.yaml
# istio-system namespace
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  labels:
    istio-discovery: enabled
