caddy-service.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: caddy
  labels:
    istio-discovery: enabled

---
apiVersion: v1
kind: Service
metadata:
  name: caddy-service
  namespace: caddy
  labels:
    istio.io/dataplane-mode: ambient
    istio.io/ingress-use-waypoint: "true"
    istio.io/use-waypoint: istio-waypoint
    istio.io/use-waypoint-namespace: istio-waypoint
spec:
  selector:
    app: caddy-server
  ports:
    - protocol: TCP
      port: 9999
      targetPort: 443
  type: ClusterIP

---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: caddy
  namespace: caddy
spec:
  parentRefs:
  - name: istio-gateway
    namespace: istio-gateway
    sectionName: tls-listener
  # hostnames:
  # - caddy.internal
  rules:
  - backendRefs:
    - name: caddy-service
      port: 9999

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caddy-payload-server
  namespace: caddy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: caddy-server
  template:
    metadata:
      labels:
        app: caddy-server
        istio.io/dataplane-mode: ambient
    spec:
      # InitContainer creates a 1GB file
      containers:
      - name: caddy
        image: caddy:latest
        ports:
        - containerPort: 443
        volumeMounts:
        - name: config-volume
          mountPath: /etc/caddy/Caddyfile
          subPath: Caddyfile
        - name: data-storage
          mountPath: /data
      volumes:
      - name: config-volume
        configMap:
          name: caddy-config
      - name: data-storage
        emptyDir: {}
